--- a/acerca.html
+++ b/acerca.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-light position">
+        <nav class="navbar navbar-expand-lg position">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Nuestro Elemento</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
