--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg position">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Nuestro Elemento</a>
+              <a class="navbar-brand animation" href="#">Nuestro Elemento</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,9 +44,10 @@
         <img src="images/Header 1.jpeg" alt="Primera imagen cabeza"
         width="450"
         height="auto">
-        <img src="images/Logo.jpeg" alt=""
-        width="450"
-        height="auto">
+        <div class="animation"> <img src="images/Logo.jpeg" alt="Imagen logo"
+            width="450"
+            height="auto">
+        </div>
         <img src="images/imagen header2.jpeg" alt=""
         width="450"
         height="auto">
